# armlinuxbook

./: README.md
ch2/: configure.scan
ch2/autotest/: Makefile.am  build.sh  config.status  configure  configure.ac  test.c
ch2/autotest/autom4te.cache/: output.0  output.1  requests  traces.0  traces.1
ch2/autotest/lib/: Makefile.am  func1.c
ch2/exampthread/: Makefile  exampthread.c
official/chapter02/: addusers.txt
official/chapter02/helloworld/: Makefile  hello.c
official/chapter02/pthread/: Makefile  exampthread.c
official/chapter04/demo/: Makefile  demo.c  test  test_demo.c
official/chapter04/new_adc/: .s3c2410-adc.ko.cmd  .s3c2410-adc.mod.o.cmd  .s3c2410-adc.o.cmd  Makefile  main  main.c  s3c2410-adc.c  s3c2410-adc.c.bak  s3c2410-adc.h  s3c2410-adc.ko  s3c2410.h_chip.H
official/chapter04/stepper/: .stepper.ko.cmd  .stepper.mod.o.cmd  .stepper.o.cmd  Makefile  stepmotor_main.c  stepmotor_main.c.bak  stepper.c  stepper.c.bak  stepper.h  stepper.h.bak  stepper.ko  steppercompile  steppertest.c  steppertest.c.bak  ~$步进电机.doc  步进电机.doc
official/chapter05/gsoap-2.7/: Makefile.in  config.h.in  configure  configure.in
official/chapter05/gsoap-2.7/soapcpp2/samples/wsa/: Makefile  Makefile.am  Makefile.in  wsademo.c  wsademo.h
official/chapter05/konqueror/: 嵌入式浏览器konqueror移植笔记.doc
official/chapter05/mplayer/: mplayer配置的说明.doc
official/chapter05/phoneme/: phoneme_base_on_qte2.doc
official/chapter05/sqlite/: opendbsqlite.c
official/chapter06/: allk&allm.sh  matrix&ps2m.sh  matrixdirt&usbm.sh  ps2k&ps2m.sh  ps2k&usbm.sh
(+1315 files in other folders)
